mudar images para caminho relativo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header class="header">
-      <img class="header-image" src="/image/logo.svg" alt="logo-ballerini" />
+      <img class="header-image" src="image/logo.svg" alt="logo-ballerini" />
       <nav id="header-nav">
         <a>Comunidade Ballerini</a>
         <a>Tutorial</a>
@@ -31,7 +31,7 @@
         </div>
         <img
           class="content-image"
-          src="/image/avatar.svg"
+          src="image/avatar.svg"
           alt="avatardoballebot"
         />
       </section>
@@ -52,7 +52,7 @@
       </section>
     </main>
     <footer class="footer">
-      <img id="footer-image" src="/image/ballerini.svg" alt="" />
+      <img id="footer-image" src="image/ballerini.svg" alt="" />
     </footer>
     <script src="/script.js"></script>
   </body>
